crates/inertia-macros/tests/ui/fail/missing_component.stderr
error: InertiaPage requires #[inertia(component = "...")]
 --> tests/ui/fail/missing_component.rs:4:1
  |
4 | struct Missing { value: u32 }
  | ^^^^^^
